# hisui

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  FAQ.md  NOTICE.md  README.md  VERSION  build.bash  format.bash  lint.bash
.github/workflows/: build.yml  lint.yml
cmake/: REAME.md
doc/: BUILD_HISUI.md  BUILD_LINUX.md  FAQ.md  LAYOUT.md  USE.md  USE_HISUI.md
docker/: Dockerfile
misc/: hisui_completion.bash  hisui_completion.zsh
src/: archive.cpp  archive.hpp  archive_item.cpp  archive_item.hpp  audio_metadata.hpp  config.cpp  config.hpp  constants.hpp  datetime.cpp  datetime.hpp  frame.hpp  hisui.cpp  metadata.cpp  metadata.hpp
src/audio/: basic_sequencer.cpp  basic_sequencer.hpp  buffer_fdk_aac_encoder.cpp  buffer_fdk_aac_encoder.hpp  buffer_opus_encoder.cpp  buffer_opus_encoder.hpp  decoder.hpp  encoder.hpp  fdk_aac.cpp  fdk_aac.hpp  mixer.cpp  mixer.hpp  opus.cpp  opus.hpp  opus_decoder.cpp  opus_decoder.hpp  sequencer.hpp  source.hpp  webm_source.cpp  webm_source.hpp  webms2audio.cpp
src/layout/: archive.cpp  archive.hpp  async_webm_muxer.cpp  async_webm_muxer.hpp  audio_sequencer.cpp  audio_sequencer.hpp  audio_source.cpp  audio_source.hpp  cell.cpp  cell.hpp  cell_util.cpp  cell_util.hpp  compose.cpp  composer.cpp  composer.hpp  grid.cpp  grid.hpp  metadata.cpp  metadata.hpp  opus_audio_producer.cpp  opus_audio_producer.hpp  overlap.cpp  overlap.hpp  region.cpp  region.hpp  reuse.hpp  source.cpp  source.hpp  video_source.cpp  video_source.hpp  vpx_video_producer.cpp  vpx_video_producer.hpp
src/muxer/: async_webm_muxer.cpp  async_webm_muxer.hpp  audio_producer.cpp  audio_producer.hpp  faststart_mp4_muxer.cpp  faststart_mp4_muxer.hpp  fdk_aac_audio_producer.cpp  fdk_aac_audio_producer.hpp  mp4_muxer.cpp  mp4_muxer.hpp  multi_channel_vpx_video_producer.cpp  multi_channel_vpx_video_producer.hpp  muxer.cpp  muxer.hpp  opus_audio_producer.cpp  opus_audio_producer.hpp  simple_mp4_muxer.cpp  simple_mp4_muxer.hpp  video_producer.cpp  video_producer.hpp  vpx_video_producer.cpp  vpx_video_producer.hpp  webm_muxer.hpp
src/report/: reporter.cpp  reporter.hpp  success.cpp  success.hpp
src/util/: file.cpp  file.hpp  interval.cpp  interval.hpp  json.cpp  json.hpp
src/version/: version.cpp  version.hpp
src/video/: basic_sequencer.cpp  basic_sequencer.hpp  buffer_vpx_encoder.cpp  buffer_vpx_encoder.hpp  composer.cpp  composer.hpp  decoder.cpp  decoder.hpp  encoder.hpp  grid_composer.cpp  grid_composer.hpp  image_source.cpp  image_source.hpp  multi_channel_sequencer.cpp  multi_channel_sequencer.hpp  openh264.cpp  openh264.hpp  openh264_decoder.cpp  openh264_decoder.hpp  openh264_handler.cpp  openh264_handler.hpp  parallel_grid_composer.cpp  parallel_grid_composer.hpp  preserve_aspect_ratio_scaler.cpp  preserve_aspect_ratio_scaler.hpp  scaler.cpp  scaler.hpp  sequencer.cpp  sequencer.hpp  simple_scaler.cpp  simple_scaler.hpp  source.hpp  vpx.cpp  vpx.hpp  vpx_decoder.cpp  vpx_decoder.hpp  webm_source.cpp  webm_source.hpp  webms2video.cpp  yuv.cpp  (+1 more)
src/webm/input/: audio_context.cpp  audio_context.hpp  context.cpp  context.hpp  video_context.cpp  video_context.hpp
src/webm/output/: context.cpp  context.hpp
test/: CMakeLists.txt
test/audio/: CMakeLists.txt  main.cpp  mixer_test.cpp
test/integration/: Makefile  get_cluster_size.bash  get_cluster_start_position.bash
test/integration/input/: check  fake_h264.webm
test/integration/layout/: layout1.json
test/integration/layout/case1/: archive-GKMNF9V36N12F50CYGWFT44V18.json  archive-GKMNF9V36N12F50CYGWFT44V18.webm  archive-HVB7SC0P7H0313E10NC753CS00.json  layout1.json  layout2.json  layout3.json  layout4.json  layout_mp4_1.json  report-1FBRY1KBZN7VF742FZ24605NRG.json
test/integration/layout/webm/: case1.json
test/integration/metadata/: case1.json  case2.json  case3.json  case4.json  case5.json  case6.json  case7.json
test/integration/output/: check  check_libfdk-aac-dev-0.1.6-1  check_libfdk-aac-dev-2.0.1-1
test/layout/: CMakeLists.txt  cell_test.cpp  cell_util_test.cpp  grid_test.cpp  overlap_test.cpp  region_test.cpp  source_test.cpp
test/metadata/: CMakeLists.txt  time_offset.cpp
test/util/: CMakeLists.txt  interval_test.cpp  main.cpp
test/version/: CMakeLists.txt  main.cpp  version_test.cpp
test/video/: CMakeLists.txt  h264_test.cpp  main.cpp  vpx_test.cpp  yuv_test.cpp
